samples/_failures_safe/1761221633_339b60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77a3fee5.c: In function ‘main’:
./samples/SAFE/__tmp_77a3fee5.c:173:21: error: ‘reading’ undeclared (first use in this function)
  173 |                     reading
      |                     ^~~~~~~
./samples/SAFE/__tmp_77a3fee5.c:173:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_77a3fee5.c:173:28: error: expected ‘;’ at end of input
  173 |                     reading
      |                            ^
      |                            ;
./samples/SAFE/__tmp_77a3fee5.c:173:21: error: expected declaration or statement at end of input
  173 |                     reading
      |                     ^~~~~~~
./samples/SAFE/__tmp_77a3fee5.c:173:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77a3fee5.c:173:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77a3fee5.c:173:21: error: expected declaration or statement at end of input
